schema/testdata/validation_expression_enum_where_operator_mismatch/schema.keel
model Post {
  fields {
    status PostStatus
  }

  operations {
    list getPublishedPosts() {
      @where(post.status == OtherPostStatus.Something)
    }
  }
}

enum PostStatus {
  Published
  Draft
}

enum OtherPostStatus {
  Something
  Else
}
