schema/testdata/errors/expression_enum_where_operator_mismatch.keel
model Post {
    fields {
        status PostStatus
    }

    actions {
        list getPublishedPosts() {
            //expect-error:20:60:E026:post.status is PostStatus and OtherPostStatus.Something is OtherPostStatus
            @where(post.status == OtherPostStatus.Something)
        }
    }
}

enum PostStatus {
    Published
    Draft
}

enum OtherPostStatus {
    Something
    Else
}
